Fixed Masonry spacing bug. Did this by adding containing divs since apparently masonry doesn't respect margins or padding on its masonry-brick element.

--- a/sass/_photo-feed.scss
+++ b/sass/_photo-feed.scss
@@ -8,7 +8,7 @@
 		margin-right: auto;
 
 		.photo-column {
-			display: inline-block;
+			display: block;
 			float: left;
 			width: 200px;
 			margin: 20px 3px;
